--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!doctype html>
 <html lang="en">
-
-<head>
+  
+  <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-
+  
   <title>Backbone Boilerplate</title>
 
   <!-- Application styles. -->
   <!-- build:[href] /styles.min.css -->
   <link rel="stylesheet" href="/app/styles/index.css">
   <!-- /build -->
-</head>
-
-<body>
+  </head>
+  
+  <body>
   <!-- Application container. -->
   <main role="main" id="main"></main>
-
+  <div id="canvas"></div>
   <!-- Application source. -->
   <!-- build:[src] /source.min.js -->
   <script data-main="/app/main" src="/vendor/bower/requirejs/require.js"></script>
   <!-- /build -->
-</body>
-
+  </body>
+  
 </html>
